Add index class and style

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -267,3 +267,16 @@
     }
   }
 }
+
+.index {
+  width: 80%;
+  margin: 10px auto;
+  .empty {
+    text-align: center;
+  }
+  ul {
+    li {
+      list-style-type: none;
+    }
+  }
+}
