--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -1,21 +1,22 @@
-%h1 学習一覧
-%hr/
-= paginate @lessons
-%hr/
-- if @lessons.empty?
-  %h1 まだ学習はありません
-- else
-  - @lessons.each_with_index do |lesson, index|
-    %ul
-      = params[:page] ? "No.#{params[:page].to_i - 1}#{index}" : "No.#{index}"
-      %li
-        = "日付：#{lesson.created_at.strftime('%Y/%m/%d')}"
-      %li
-        = "内容：#{lesson.content}"
-      %li
-        = "精度：#{lesson.correctness}%"
-      %li
-        = link_to "詳細","/users/#{current_user.id}/lessons/#{lesson.id}"
-        = link_to "削除","/users/#{current_user.id}/lessons/#{lesson.id}", method: :delete, data: {confirm: "削除しますか？"}
-    %hr/
-= paginate @lessons
+%h1.uk-heading-small.uk-text-center 学習一覧
+.index 
+  %hr/
+  = paginate @lessons
+  %hr/
+  - if @lessons.empty?
+    %h1 まだ学習はありません
+  - else
+    - @lessons.each_with_index do |lesson, index|
+      %ul
+        = params[:page] ? "No.#{params[:page].to_i - 1}#{index}" : "No.#{index}"
+        %li
+          = "日付：#{lesson.created_at.strftime('%Y/%m/%d')}"
+        %li
+          = "内容：#{lesson.content}"
+        %li
+          = "精度：#{lesson.correctness}%"
+        %li
+          = link_to "詳細","/users/#{current_user.id}/lessons/#{lesson.id}"
+          = link_to "削除","/users/#{current_user.id}/lessons/#{lesson.id}", method: :delete, data: {confirm: "削除しますか？"}
+      %hr/
+  = paginate @lessons
