--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -16,7 +16,8 @@
         %li
           = "精度：#{lesson.correctness}%"
         %li
-          = link_to "詳細","/users/#{current_user.id}/lessons/#{lesson.id}"
-          = link_to "削除","/users/#{current_user.id}/lessons/#{lesson.id}", method: :delete, data: {confirm: "削除しますか？"}
+          .buttons
+            = link_to "詳細","/users/#{current_user.id}/lessons/#{lesson.id}", class: "uk-button uk-button-default"
+            = link_to "削除","/users/#{current_user.id}/lessons/#{lesson.id}", method: :delete, data: {confirm: "削除しますか？"}, class: "uk-button uk-button-danger"
       %hr/
   = paginate @lessons
