--- a/app/views/reviews/today.html.haml
+++ b/app/views/reviews/today.html.haml
@@ -4,7 +4,8 @@
   - if @reviews.empty?
     %h2.empty 今日の復習はありません
   - else
-    = link_to "復習を開始する", user_reviewing_path, class: "uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom"
+    .review-btn
+      = link_to "復習を開始する", user_reviewing_path, class: "uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom"
     %hr/
     - @reviews.each_with_index do |review, i|
       %ul
