--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -97,6 +97,7 @@
         width: 800px;
         background-color: white;
         border: 1px solid black;
+        overflow-y: scroll; ;
       }
       &__bottom {
         margin-top: 5px;
