Stick the header

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   %body
-    %header.header
+    %header.header.uk-card.uk-card-default.uk-card-body{style: "z-index: 980;", "uk-sticky": "bottom: #offset"}
       .header__left
         - if user_signed_in?
           =link_to current_user do
