--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -22,7 +22,7 @@
       %div
         .uk-card.uk-card-default.uk-card-body.uk-card-hover{style: 'height: 350px'}
           %h3.uk-card-title 様々な学習サポート
-          音声合成・音声認識・文章比較により、あなたの学習時をより効果的に！
+          音声合成・音声認識・文章比較により、あなたの学習をより効果的に！
           = image_tag 'voice_recognition.jpg', alt: 'voice recognition image', size: "400x120", class: 'uk-card-media-bottom', style: 'max-height: 215px; margin: 10px auto;'
       %div
         .uk-card.uk-card-default.uk-card-body.uk-card-hover{style: 'height: 350px'}
