--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -28,18 +28,36 @@
     justify-content: right;
 
     &__link {
-      padding-left: 20px;
+      text-decoration: none;
+      display: inline-block;
+      position: relative;
+      margin-left: 20px;
       color: white;
       font-size: 18px;
       &:hover {
+        text-decoration: none;
         color: white;
+        &::after {
+        transform: scaleX(1);
+        transform-origin: bottom left;
       }
-      &:active {
-        color: lightgrey;
+      }
+      &::after{ 
+        content: '';
+        position: absolute;
+        width: 100%;
+        transform: scaleX(0);
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #5878F3;
+        transform-origin: bottom right;
+        transition: transform 0.4s cubic-bezier(0.86, 0, 0.07, 1);
       }
     }
   }
 }
+
 
 main {
   min-height: calc(100vh - 215px);
