--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
+    = favicon_link_tag('phonety-icon.png')
   %body
     %header.header.uk-card.uk-card-default.uk-card-body{style: "z-index: 980;", "uk-sticky": "bottom: #offset"}
       .header__left
