Change default profile icon

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,7 @@
 .user-page
   .left-container
     .user
-      = image_tag 'profile-img.jpg', alt: 'user-image', size: "200x200", class: "user__image"
+      = image_tag 'profile_icon.png', alt: 'user-image', size: "200x200", class: "user__image"
       .user__name
         = current_user.name
       .user__goal
